<resources>
    <string name="app_name">Seek &amp; Sell</string>
    <string name="special">Special</string>
    <string name="category">Category</string>
    <string name="sell">Sell</string>
    <string name="invite">Invite Friends</string>
    <string name="help">Help</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search a items...</string>
    <string name="profile">Profile</string>
    <string name="Label_Search">Search</string>
    <string name="title_activity_advance_search">Map</string>
    <string name="done">Done</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="no_message">3 UNREAD MESSAGE</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="sold">Item sold to another user</string>

    <!-- IDS: -->
    <string name="facebook_app_id">1649383278617549</string>
    <string name="facebook">facebook</string>
    <string name="continue_with_facebook">Log in with Facebook</string>
    <string name="its_easier">It\'s easier than ever to become a Rayies</string>
    <string name="login_benifit">Log in and discover beautiful things in your neighbourhood or start selling in seconds</string>
    <string name="login_email">Log in with E-mail + SMS</string>
    <string name="log_out">Log out</string>
    <string name="smsinvite">Visit seek and sell. www.seeksell.com</string>
    <string name="editpic">Change profile picture</string>
    <string name="edit_video_title">Change Video Picture</string>

    <style name="videopic">Change video picture</style>

    <string name="cancel">Cancel</string>
    <string name="editemail">Change Email</string>
    <string name="ok">OK</string>
    <string name="what_selling">What are you selling ...</string>
    <string name="describe">Describe it ...</string>
    <string name="choose_category">Choose Category</string>
    <string name="currency">Currency</string>
    <string name="sell_it">Sell It</string>
    <string name="friendsnfollowing">Friends &amp; following</string>
    <string name="new_in_your_area">New in your area</string>
    <string name="summer_festival_season">Summer . Festival Season</string>
    <string name="young_designer">Young designer</string>
    <string name="summer_fashion">Summer . Fashion</string>
    <string name="give_away">Giveaways</string>
    <string name="schpock_selection">Schpock Selection</string>
    <string name="fashion_and_accessories">Fashion and Accessories</string>
    <string name="home_and_garden">Home and Garden</string>
    <string name="electronics">Electronics</string>
    <string name="movies_books_and_music">Movies, Books and Music</string>
    <string name="baby_and_child">Baby and Child</string>
    <string name="cars_and_motors">Cars and Motors</string>
    <string name="hot_in_your_area">Hot in your area</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="edt">Edit</string>
    <string name="dlt">Delete</string>
    <string name="mark">Mark as sold everywhere</string>
    <!-- <string name="name_hint">User Name</string>
    <string name="email_hint">Email</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">Register</string>
    <String name="already_txt">Already Member</String>
    <string name="sign_in_button"><u>Sign in</u></string>

-->

    <string name="title">Please select an action:</string>
    <string name="imageurl">http://netforce.biz/seeksell/files/products/</string>
    <string name="profile_url">http://netforce.biz/seeksell/files/profile/</string>


    <string-array name="items">
        <item>@string/edt</item>
        <item>@string/dlt</item>
        <item>@string/mark</item>
    </string-array>

</resources>
