<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.netforce.ray.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="16dp"
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/pro_pic" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginBottom="16dp"
            android:text="JOIN NOW!"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-thin"
            android:maxLines="2"
            android:text="@string/its_easier"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"

        android:text="@string/login_benifit"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonCustomFB"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#4267B2"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/continue_with_facebook"
                android:textAllCaps="false"
                android:textColor="#ffffff" />
            <Button
                android:textAllCaps="false"
                android:fontFamily="sans-serif-light"
                android:backgroundTint="@color/grey_transparent"
                android:layout_width="match_parent"
                android:text="@string/login_email"
                android:layout_height="56dp" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:weightSum="400"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="FEEDBACK"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="ABOUT"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="TERMS"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="ABOUT"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_facebook"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:visibility="gone" />

</LinearLayout>
