<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.netforce.ray.sell.SellActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/gradient_mixed">

                <ImageView
                    android:id="@+id/imageViewDP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/pro_pic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_mixed" />

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent">

                    <FrameLayout
                        android:id="@+id/toolbar_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <include
                            android:id="@+id/toolbar"
                            layout="@layout/app_bar_transparent" />
                    </FrameLayout>

                </android.support.design.widget.AppBarLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/appbar"
                    android:gravity="center"
                    android:padding="10dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/appbar">


                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/what_selling"
                        android:textSize="20sp"
                        materialdesign:met_hideUnderline="true" />
                </LinearLayout>

                <LinearLayout
                    android:padding="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:gravity="top|left"
                        android:hint="@string/describe"
                        android:lines="5"
                        materialdesign:met_hideUnderline="true" />
                </LinearLayout>

                <LinearLayout
                    android:padding="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp" />
                </LinearLayout>

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:background="@color/white"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/currency"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_weight="40" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="60"
                        android:gravity="left"
                        android:hint="Price"
                        android:inputType="numberDecimal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30">

                        <com.gc.materialdesign.views.Switch
                            android:id="@+id/switchShare"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            materialdesign:check="true" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="70"
                        android:text="Share it on facebook"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="18sp" />
                </LinearLayout>

                <com.gc.materialdesign.views.ButtonRectangle
                    android:id="@+id/buttonSell"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sell_it"
                    >
                </com.gc.materialdesign.views.ButtonRectangle>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
